// IngredientType.java
package com.restaurant.util;

public enum IngredientType {
    SOLID,
    LIQUID
}
