// Unit.java
package com.restaurant.util;

public enum IngredientUnit {
    KG,
    G,
    MG,
    L,
    ML
}
