package com.restaurant.util;

public enum PlatType {
    REGULAR,
    KIDS,
    HEALTHY
}
